[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/pause.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/hud.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/enemy_spawner.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/terrains/terrain.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/game.gd" type="Script" id=6]
[ext_resource path="res://scenes/background/space_background.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/audio/Explosion Sharp.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/audio/Hit 5.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/audio/Race to Mars.mp3" type="AudioStream" id=10]
[ext_resource path="res://assets/audio/Collect 5.wav" type="AudioStream" id=11]
[ext_resource path="res://scenes/controls/virtual_joystick.tscn" type="PackedScene" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17.5, 201.5 )

[sub_resource type="Environment" id=2]
background_mode = 4
glow_enabled = true
glow_intensity = 1.25
glow_strength = 1.08
glow_hdr_threshold = 2.5

[node name="Game" type="Node2D"]
script = ExtResource( 6 )

[node name="Background" parent="." instance=ExtResource( 7 )]

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 46, 170 )
scale = Vector2( 1.1, 1.1 )

[node name="Terrain" parent="." instance=ExtResource( 5 )]

[node name="EnemySpawner" parent="." instance=ExtResource( 4 )]

[node name="DeathZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathZone"]
position = Vector2( -19.5, 184.5 )
shape = SubResource( 1 )

[node name="PlayerHitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[node name="ExplosionSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = -15.0

[node name="CollectedSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
volume_db = -10.0

[node name="GameMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
volume_db = -8.0
autoplay = true

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Virtual joystick" parent="UI" instance=ExtResource( 12 )]
margin_left = 48.0
margin_top = 136.0
margin_right = 248.0
margin_bottom = 336.0

[node name="Pause" parent="UI" instance=ExtResource( 1 )]
visible = false
margin_left = 136.0
margin_top = 80.0
margin_right = 536.0
margin_bottom = 280.0

[node name="HUD" parent="UI" instance=ExtResource( 2 )]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[connection signal="nose_touch" from="Player" to="." method="_on_player_nose_touch"]
[connection signal="pause" from="Player" to="." method="_on_player_pause"]
[connection signal="took_damage" from="Player" to="." method="_on_player_took_damage"]
[connection signal="mineral_collected" from="Terrain" to="." method="_on_terrain_mineral_collected"]
[connection signal="spawning" from="Terrain" to="." method="_on_terrain_spawning"]
[connection signal="super_spawn" from="Terrain" to="." method="_on_Terrain_super_spawn"]
[connection signal="turret_died" from="Terrain" to="." method="_on_terrain_turret_died"]
[connection signal="enemy_spawned" from="EnemySpawner" to="." method="_on_enemy_spawner_enemy_spawned"]
[connection signal="path_enemy_spawned" from="EnemySpawner" to="." method="_on_enemy_spawner_path_enemy_spawned"]
[connection signal="area_entered" from="DeathZone" to="." method="_on_death_zone_area_entered"]
[connection signal="body_entered" from="DeathZone" to="." method="_on_death_zone_body_entered"]
[connection signal="body_exited" from="DeathZone" to="." method="_on_death_zone_body_exited"]
[connection signal="resume" from="UI/Pause" to="." method="_on_pause_resume"]
[connection signal="pause_click" from="UI/HUD" to="." method="_on_hud_pause_click"]
